--- a/comochegar.html
+++ b/comochegar.html
@@ -32,6 +32,7 @@
 			</section>
 			<footer>
 				<p>Rua Coronel Agostinho, 34. Telefone (21) 2412-2165</p>
+				<p>Senac 2018</p>
 			</footer>
 		<div>
 	</body>
